# qt-demo

./: CMakeLists.txt  CrashDetailsDialog.cpp  CrashDetailsDialog.h  CrashDialog.cpp  CrashDialog.h  Makefile  README.md  main.cpp  qt-demo.pro  record.txt
